k8s/05-service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: hf-model-finder-app
  namespace: hf-model-finder
spec:
  type: ClusterIP
  selector:
    app: hf-model-finder
    component: app
  ports:
    - name: http
      port: 80
      targetPort: 8501
